--- a/MPU6050/Readme
+++ b/MPU6050/Readme
@@ -1,1 +1,3 @@
-MPU6050 determines the angles of deviation from the horizon and acceleration in the normal coordinate system
+Here is a program for Arduino Nano, which uses the MPU6050 accelerometer/gyroscope sensor to determine the angles of deviation from the horizon and acceleration in the normal coordinate system
+
+Здесь представлена программа для Arduino Nano, которая с помощью датчика акселерометра/гироскопа MPU6050 определяет углы отклонения от горизонта и ускорения в нормальной системе координат
