--- a/BuoyThatMeasuresSeaWavesUsingSpectralAnalysis/Readme
+++ b/BuoyThatMeasuresSeaWavesUsingSpectralAnalysis/Readme
@@ -1,1 +1,8 @@
-
+Здесь представлены две программы для Arduino Nano:
+- MPU2SpectrAnalisT - передатчик
+  1) с помощью датчика акселерометра/гироскопа MPU6050 определяет углы отклонения от горизонта и ускорения в нормальной системе координат,
+  2) на основании ускорения в нормальной системе координат строит спектр ускорений и перемещений,
+  3) с помощью радио NRF24L01 передает данные на приемник
+- MPU2SpectrAnalisR - приемник
+  1) с помощью радио NRF24L01 принимает данные от передатчика,
+  2) отображает спектр перемещений на дисплее TFT LCD 3.5".
