--- a/BuoyThatMeasuresSeaWavesUsingSpectralAnalysis/BuoyTest/Readme
+++ b/BuoyThatMeasuresSeaWavesUsingSpectralAnalysis/BuoyTest/Readme
@@ -1,1 +1,2 @@
-
+Here is the implementation of the buoy and its testing in real conditions  
+Здесь представлена реализация буя и его тестирование в реальных условиях
